@@ -22,3 +22,34 @@ SELECT
   field(4, 1, 2, 3, 4),
   field(4, 1, 2, NULL, 4)
 FROM src LIMIT 1;
+
+DROP TABLE test_table;
+CREATE TABLE test_table(col1 STRING, col2 STRING) STORED AS TEXTFILE;
+LOAD DATA LOCAL INPATH '../data/files/kv1.txt' INTO TABLE test_table;
+
+select col1,col2,
+  field("66",col1),
+  field("66",col1, col2),
+  field("val_86",col1, col2),
+  field(NULL, col1, col2),
+  field(col1, 66, 88),
+  field(col1, "66", "88"),
+  field(col1, "666", "888"),
+  field(col2, "66", "88"),
+  field(col1, col2, col1),
+  field(col1, col2, "66")
+from test_table where col1="86" or col1="66";
+
+DROP TABLE test_table1;
+CREATE TABLE test_table1(col1 int, col2 string) STORED AS TEXTFILE;
+LOAD DATA LOCAL INPATH '../data/files/kv1.txt' INTO TABLE test_table1;
+
+select col1,col2,
+  field(66,col1),
+  field(66,col1, col2),
+  field(86, col2, col1),
+  field(86, col1, col1),
+  field(86,col1,n,col2),
+  field(NULL,col1,n,col2),
+  field(col1, col2)
+from (select col1, col2, NULL as n from test_table1 where col1=86 or col1=66) t;
